Fix some layout issues with the messages list

--- a/app/widgets/Progress.scss
+++ b/app/widgets/Progress.scss
@@ -6,7 +6,7 @@
   visibility: hidden;
   align-items: center;
   justify-content: center;
-  margin: .5em;
+  padding: .5em;
   &.animated {
     visibility: visible;
   }
